appId: com.fasterpay.app.staging
tags:
  - fp
---
- launchApp:
    clearState: true
- assertVisible: ".*"
- runFlow:
    when:
      visible: "ADD MONEY"
    commands:
      - tapOn: Next

- runFlow:
    when:
      visible: "CONVERT MONEY"
    commands:
      - tapOn: Next

- runFlow:
    when:
      visible: "SEND MONEY"
    commands:
      - tapOn: Next

- runFlow:
    when:
      visible: "WITHDRAW MONEY"
    commands:
      - tapOn: Get started

- tapOn:
    id: btnSignUp
- tapOn: Personal
- runScript: ../utils/generate_phone.js
- tapOn:
    id: edtPhoneNumber
- inputText: "${output.generatedPhone}"
- copyTextFrom:
    id: edtPhoneNumber
- tapOn:
    id: btnContinue
- runScript:
    file: ../utils/sms-helper.js
    env:
      PHONE_NUMBER: "${output.generatedPhone}"
- inputText: ${output.otp}
- tapOn:
    id: edtEmail
- inputRandomEmail
- tapOn: Continue
- tapOn:
    id: edtSignUpPassword
- inputText: "12345Aa@"
- tapOn: Continue
- tapOn:
    id: edtSignUpFirstName
- inputText: "Hellen"
- tapOn:
    id: edtSignUpLastName
- inputText: "Johnson"
- tapOn: Continue
- tapOn: Continue
- inputText: "5396 North Reese Avenue"
- tapOn:
    id: ic_suggested_add
- tapOn: "State"
- tapOn: Alaska
- tapOn: Continue
- swipe:
    from:
      text: "2007"
    direction: DOWN
- tapOn: Continue
- tapOn: Continue without a referral code

- assertVisible: Done

- tapOn:
    text: "0"
    repeat: 6
    delay: 500

- tapOn:
    text: "0"
    repeat: 6
    delay: 500

- runFlow:
    when:
      visible: "Allow Biometric ID?"
    commands:
      - tapOn: Do it later

- tapOn: Continue
- tapOn: Do it later

- runFlow:
    when:
      visible: "Failed to create chat user.*"
    commands:
      - tapOn: Cancel

- runFlow:
    when:
      visible:
        id: ic_close_banner
    commands:
      - tapOn:
          id: ic_close_banner

- assertVisible: ACCOUNT
- assertVisible: Add money

- tapOn: ic circle setting
- scrollUntilVisible:
    element: Log out
- tapOn: "Log out"
- tapOn: "OK"
- assertVisible: "WELCOME TO FASTERPAY"
