appId: com.fasterpay.app.staging
tags:
  - fp
---
- launchApp
- tapOn: Log In
- tapOn:
    point: "50%, 25%"
- inputText: iosus2267@fp.com
- tapOn:
    point: "50%, 32%"
- inputText: 12345Aa@
- doubleTapOn:
    text: Log In
    index: -1

- runScript:
    file: ../utils/sms-helper.js
    env:
      MESSAGE_TYPE: "email"
      EMAIL_ADDRESS: "iosus2267@fp.com"
- inputText: ${output.otp}

- runFlow:
    when:
      visible: "CREATE PASSCODE"
    commands:
      - tapOn:
          text: "0"
          repeat: 6
          delay: 500
      - tapOn:
          text: "0"
          repeat: 6
          delay: 500

- runFlow:
    when:
      visible: "Allow Biometric ID?"
    commands:
      - tapOn: Do it later

- runFlow:
    when:
      visible: "Failed to create chat user.*"
    commands:
      - tapOn: Cancel

- runFlow:
    when:
      visible:
        id: ic_close_banner
    commands:
      - tapOn:
          id: ic_close_banner

- runFlow:
    when:
      visible: "This feature is un.*"
    commands:
      - tapOn: Cancel

- assertVisible: ACCOUNT
- assertVisible: Add money
